Update hw.md